styles/newsletter.scss
$o-labels-is-silent: true;
@import 'o-labels/main';

$o-buttons-is-silent: true;
@import 'o-buttons/main';

$o-icons-is-silent: false;
@import "o-icons/main";

$o-grid-gutter-small: oGridGutter(S);

.n-newsletter-signup {
	display: flex;
	flex-direction: column;
	position: relative;
	width: 100%;

	&::after {
		content: '';
		display: block;
		margin-top: 21px;
		border-bottom: 1px solid getColor('black-20');
	}
}

.n-newsletter-signup__header {
	display: flex;
	background-color: getColor('claret');
	color: white;
	padding: 5px 12px;
	min-height: 100px;
	position: relative;
	box-sizing: border-box;

	// cancel-out o-grid margin for mobile card
	@include oGridRespondTo($until: S) {
		left: -$o-grid-gutter-small;
		width: calc(100% + #{$o-grid-gutter-small * 2});
	}
}

.n-newsletter-signup__heading {
	display: flex;
	margin: 0;
	align-self: center;
	// for IE<11
	max-width: 100%;
	flex-shrink: 1;
}

.n-newsletter-signup__heading__title {
	@include oTypographyDisplayBold($scale: 2);
	font-size: 30px;
	line-height: 30px;
	@include oGridRespondTo($from: M, $until: XL) {
		font-size: 24px;
		line-height: 28px;
	}
	@include oGridRespondTo($until: S) {
		font-size: 40px;
		line-height: 40px;
	}
	margin: 0;
}

.n-newsletter-signup__heading__mail-icon__wrapper {
	width: 40px;
	height: 40px;
	margin-top: -5px;
	@include oGridRespondTo($from: M, $until: XL) {
		width: 35px;
		height: 35px;
	}
	@include oGridRespondTo($until: S) {
		width: 50px;
		height: 50px;
	}
}

.n-newsletter-signup__heading__mail-icon {
	@include oIconsGetIcon('mail', getColor('white'), 40, $iconset-version: 1);
	@include oGridRespondTo($from: M, $until: XL) {
		@include oIconsGetIcon('mail', getColor('white'), 35, $iconset-version: 1);
	}
	@include oGridRespondTo($until: S) {
		@include oIconsGetIcon('mail', getColor('white'), 50, $iconset-version: 1);
	}
}

.n-newsletter-signup__content {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	flex-grow: 1;
}

.n-newsletter-signup__description {
	@include oTypographySans($scale: 0);
	display: inline-block;
	font-size: 18px;
	flex-grow: 1;
	margin: 12px 0;
}

.n-newsletter-signup__meta__premium {
	@include oLabels('premium', -2);
	margin: 0 5px 0 0;
}

.n-newsletter-signup__meta__frequency {
	@include oTypographySans($scale: -2);
	text-transform: uppercase;
	color: getColor('black-60');
	margin: 0;
}

.n-newsletter-signup__submit {
	@include oButtons();
	@include oButtonsSize(big);
	margin: 14px 0 0;
}

[data-newsletter-user-is-subscribed] .n-newsletter-signup__submit {
	@include oButtonsTheme(primary);

	&:before {
		content: '';
		width: 20px;
		height: 12px;
		display: inline-block;
		background-size: 30px;
		vertical-align: middle;
		margin-left: -10px;
		background-position: center;
		@include _oButtonsGetIconForThemeAndState(tick, primary, normal)
	}
}

.n-newsletter-signup__upgrade {
	@include oButtons();
	@include oButtonsSize(big);
	margin: 14px 0 0;
}

